--- a/kudu/kudu.conf
+++ b/kudu/kudu.conf
@@ -5,6 +5,9 @@ Listen 8181
 
     ProxyPass /webssh/ http://localhost:3000/webssh/
 
+    ProxyPass /DebugSiteExtension/JavaDebugSiteExtension.ashx http://localhost:5000/DebugSiteExtension/JavaDebugSiteExtension.ashx
+    ProxyPass /AppServiceTunnel/Tunnel.ashx http://localhost:3000/AppServiceTunnel/Tunnel.ashx
+
     MonoAutoApplication disabled
     AddHandler mono .aspx ascx .asax .ashx .config .cs .asmx .axd
     MonoApplications "/:/opt/Kudu"
