--- a/kudu/kudu.conf
+++ b/kudu/kudu.conf
@@ -5,8 +5,8 @@ Listen 8181
 
     ProxyPass /webssh/ http://localhost:3000/webssh/
 
-    ProxyPass /DebugSiteExtension/JavaDebugSiteExtension.ashx http://localhost:5000/DebugSiteExtension/JavaDebugSiteExtension.ashx
-    ProxyPass /AppServiceTunnel/Tunnel.ashx http://localhost:5000/AppServiceTunnel/Tunnel.ashx
+    ProxyPass /DebugSiteExtension/JavaDebugSiteExtension.ashx ws://localhost:5000/
+    ProxyPass /AppServiceTunnel/Tunnel.ashx ws://localhost:5000/
 
     MonoAutoApplication disabled
     AddHandler mono .aspx ascx .asax .ashx .config .cs .asmx .axd
