Fixed the bug where Apache would give 503 when the Node process restarts. Added the code for auto refresh of webssh

--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -332,7 +332,7 @@ RUN apt-get install -y apt-transport-https lsb-release ca-certificates \
   && wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg \
   && sh -c 'echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > /etc/apt/sources.list.d/php.list' \ 
   && apt-get update \
-  && apt-get install -y php7.2 php7.2-common php7.2-cli php7.2-fpm php7.2-mysql php7.2-pgsql php7.2-curl php7.2-json php7.2-bcmath php7.2-dom php7.2-gd php7.2-gmp php7.2-imagick php7.2-imap php7.2-intl php7.2-ldap php7.2-mbstring php7.2-odbc php7.2-SimpleXML php7.2-soap php7.2-sqlite php7.2-tidy php7.2-wddx php7.2-xmlrpc php7.2-xmlwriter php7.2-xsl php7.2-zip
+  && apt-get install -y php7.2 php7.2-common php7.2-cli php7.2-fpm php7.2-mysql php7.2-pgsql php7.2-curl php7.2-json php7.2-bcmath php7.2-dom php7.2-gd php7.2-gmp php7.2-imagick php7.2-imap php7.2-intl php7.2-ldap php7.2-mbstring php7.2-odbc php7.2-SimpleXML php7.2-soap php7.2-sqlite3 php7.2-tidy php7.2-wddx php7.2-xmlrpc php7.2-xmlwriter php7.2-xsl php7.2-zip
 
 # Microsoft Drivers for PHP for SQL Server
 RUN apt-get update \
@@ -530,6 +530,11 @@ RUN mv /usr/bin/ssh /usr/bin/ssh.original \
   && chmod 755 /usr/bin/ssh
 
 COPY hostingstart.html /home/site/wwwroot/hostingstart.html
+COPY KuduStaticFiles/503.html /opt/Kudu/503.html
+COPY KuduStaticFiles/_Layout.cshtml /opt/Kudu/_Layout.cshtml
+COPY KuduStaticFiles/AppService.png /opt/Kudu/Content/Images/AppService.png
+COPY KuduStaticFiles/linux_favicon.ico /opt/Kudu/linux_favicon.ico
+
 RUN chmod -R 777 /home \
   && rm -rf /tmp/*
 
