--- a/kudu/kudu.conf
+++ b/kudu/kudu.conf
@@ -3,10 +3,13 @@ Listen 8181
 <VirtualHost *:8181>
     ServerAdmin webmaster@localhost
 
-    ProxyPass /webssh/ http://localhost:3000/webssh/
+    ProxyPass /webssh/ http://localhost:3000/webssh/ retry=0
 
-    ProxyPass /DebugSiteExtension/JavaDebugSiteExtension.ashx ws://localhost:5000/
-    ProxyPass /AppServiceTunnel/Tunnel.ashx ws://localhost:5000/
+    ProxyPass /DebugSiteExtension/JavaDebugSiteExtension.ashx ws://localhost:5000/ retry=0
+    ProxyPass /AppServiceTunnel/Tunnel.ashx ws://localhost:5000/ retry=0
+    
+    Options -Indexes
+    ErrorDocument 503 /503.html
 
     MonoAutoApplication disabled
     AddHandler mono .aspx ascx .asax .ashx .config .cs .asmx .axd
