--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -395,8 +395,51 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/*
 
 ENV GPG_KEY 0D96DF4D4110E5C43FBFB17F2D347EA6AA65421D
-ENV PYTHON_VERSION 3.7.0
+ENV PYTHON_VERSION 3.6.6
 
+RUN set -ex \
+        && buildDeps=' \
+                dpkg-dev \
+                tcl-dev \
+                tk-dev \
+        ' \
+        && apt-get update && apt-get install -y $buildDeps --no-install-recommends && rm -rf /var/lib/apt/lists/* \
+        \
+        && wget -O python.tar.xz "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz" \
+        && wget -O python.tar.xz.asc "https://www.python.org/ftp/python/${PYTHON_VERSION%%[a-z]*}/Python-$PYTHON_VERSION.tar.xz.asc" \
+        && export GNUPGHOME="$(mktemp -d)" \
+        && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$GPG_KEY" \
+        && gpg --batch --verify python.tar.xz.asc python.tar.xz \
+        && rm -rf "$GNUPGHOME" python.tar.xz.asc \
+        && mkdir -p /usr/src/python3.6 \
+        && tar -xJC /usr/src/python3.6 --strip-components=1 -f python.tar.xz \
+        && rm python.tar.xz \
+        \
+        && cd /usr/src/python3.6 \
+        && gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)" \
+        && ./configure \
+                --build="$gnuArch" \
+                --enable-loadable-sqlite-extensions \
+                --enable-shared \
+                --with-system-expat \
+                --with-system-ffi \
+                --without-ensurepip \
+        && make -j "$(nproc)" \
+        && make install \
+        && ldconfig \
+        \
+        && apt-get purge -y --auto-remove $buildDeps \
+        \
+        && find /usr/local -depth \
+                \( \
+                        \( -type d -a \( -name test -o -name tests \) \) \
+                        -o \
+                        \( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
+                \) -exec rm -rf '{}' + \
+        && rm -rf /usr/src/python3.6
+
+
+ENV PYTHON_VERSION 3.7.0
 RUN set -ex \
 	&& buildDeps=' \
 		dpkg-dev \
@@ -446,13 +489,13 @@ RUN cd /usr/local/bin \
 	&& ln -s python3-config python-config
 
 # if this is called "PIP_VERSION", pip explodes with "ValueError: invalid truth value '<VERSION>'"
-ENV PYTHON_PIP_VERSION 10.0.1
+ENV PYTHON_PIP_VERSION 18.0
 
 RUN set -ex; \
 	\
 	wget -O get-pip.py 'https://bootstrap.pypa.io/get-pip.py'; \
 	\
-	python get-pip.py \
+	python3.6 get-pip.py \
 		--disable-pip-version-check \
 		--no-cache-dir \
 		"pip==$PYTHON_PIP_VERSION" \
@@ -466,6 +509,27 @@ RUN set -ex; \
 			\( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
 		\) -exec rm -rf '{}' +; \
 	rm -f get-pip.py
+
+
+
+RUN set -ex; \
+        \
+        wget -O get-pip.py 'https://bootstrap.pypa.io/get-pip.py'; \
+        \
+        python get-pip.py \
+                --disable-pip-version-check \
+                --no-cache-dir \
+                "pip==$PYTHON_PIP_VERSION" \
+        ; \
+        pip --version; \
+        \
+        find /usr/local -depth \
+                \( \
+                        \( -type d -a \( -name test -o -name tests \) \) \
+                        -o \
+                        \( -type f -a \( -name '*.pyc' -o -name '*.pyo' \) \) \
+                \) -exec rm -rf '{}' +; \
+        rm -f get-pip.py
 
 
 RUN pip3 install virtualenv
